# CatchMe

./: .gitignore  CATCHME-full.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  worker.js  wrangler.toml
.github/workflows/: ci.yml
assets/readme/: README_es.md  README_ja.md  README_zh.md
catchme/: __init__.py  __main__.py  config.py  engine.py  organizer.py  recorder.py  run.py  store.py  summary_queue.py  utils.py  web.py
catchme/extension/: background.js  content.js  manifest.json
catchme/extractors/: __init__.py  file.py  url.py
catchme/pipelines/: __init__.py  filter.py  retrieve.py  summarize.py  tree.py
catchme/recorders/: __init__.py  clipboard.py  idle.py  keyboard.py  keyboard_macos.py  keyboard_windows.py  mouse.py  notification.py  window.py
catchme/recorders/platform/: __init__.py  macos.py  windows.py
catchme/services/: __init__.py  config.example.json  llm.py  prompts.yaml  providers.py
catchme/static/: index.html
catchme/static/css/: base.css  chat.css  components.css  digest.css  layout.css  tree.css
catchme/static/js/: app.js  utils.js
catchme/static/js/pages/: activity.js  chat.js  context.js  digest.js  explorer.js  memory.js  recall.js  recorders.js  system.js  timeline.js  today.js  tree.js
catchme/tests/: conftest.py  test_config.py  test_engine.py  test_extractors.py  test_filter.py  test_llm.py  test_retrieve.py  test_services.py  test_store.py  test_tree.py  test_utils.py
docs/: index.html
